--- a/app/src/main/res/layout/reorder_item_list.xml
+++ b/app/src/main/res/layout/reorder_item_list.xml
@@ -130,7 +130,7 @@
                             android:text="$ 80"
                             android:textColor="@color/light_black_2"
                             android:textSize="7sp"
-                            android:visibility="invisible" />
+                            android:visibility="visible" />
 
                         <TextView
                             android:id="@+id/tvpriceNewReorder"
