--- a/app/src/main/res/layout/forgot_password.xml
+++ b/app/src/main/res/layout/forgot_password.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@android:color/transparent"
@@ -14,7 +14,7 @@
         app:contentInsetStartWithNavigation="0dp"
         app:subtitleTextColor="@color/black"
         app:theme="@style/AppTheme.Toolbar"
-        app:titleTextAppearance="@style/AppTheme.Toolbar.Title"></android.support.v7.widget.Toolbar>
+        app:titleTextAppearance="@style/AppTheme.Toolbar.Title" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
             android:gravity="center">
 
             <ImageView
-                android:layout_width="264dp"
+                android:layout_width="265dp"
                 android:layout_height="200dp"
                 android:background="@drawable/forgot_password" />
         </LinearLayout>
@@ -56,11 +56,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="48dp"
+                android:layout_marginTop="40dp"
                 android:orientation="vertical">
 
                 <android.support.design.widget.TextInputLayout
-                    android:id="@+id/name_text_input"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -70,19 +69,19 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@drawable/edit_txt_border"
+                        android:digits="0123456789+"
                         android:fontFamily="@font/roboto_regular"
                         android:gravity="center|left"
                         android:hint="Email / Mobile Number"
+                        android:inputType="phone"
                         android:minHeight="40dp"
                         android:padding="10dp"
-                        android:inputType="phone"
-                        android:digits="0123456789+"
                         android:textColor="@color/light_black_2"
                         android:textSize="14sp" />
                 </android.support.design.widget.TextInputLayout>
 
                 <Button
-                    android:id="@+id/btnSubmitFPasswd"
+                    android:id="@+id/btnSubmit"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="24dp"
@@ -96,13 +95,14 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/btnResendOTP"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:background="@color/white"
                 android:fontFamily="@font/roboto_regular"
                 android:gravity="center"
-                android:text="Resend Email/OTP?"
+                android:text="Resend Email / OTP?"
                 android:textAllCaps="false"
                 android:textColor="@color/green_1"
                 android:textSize="14sp" />
