--- a/app/src/main/res/layout/home_page_dealofday_item_list.xml
+++ b/app/src/main/res/layout/home_page_dealofday_item_list.xml
@@ -197,6 +197,8 @@
                     android:id="@+id/addcartDealofDay"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="0dp"
                     android:background="@drawable/cart_shadow"
                     android:fontFamily="@font/roboto_medium"
                     android:text="Add To Cart"
