--- a/app/src/main/res/layout/my_profile_act.xml
+++ b/app/src/main/res/layout/my_profile_act.xml
@@ -39,7 +39,7 @@
                         android:background="@drawable/rounded_login_button"
                         android:backgroundTint="@color/white">
 
-                        <com.mikhaellopez.circularimageview.CircularImageView
+                        <ImageView
                             android:id="@+id/ivProfile"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
