--- a/app/src/main/res/layout/edit_profile_act.xml
+++ b/app/src/main/res/layout/edit_profile_act.xml
@@ -33,14 +33,13 @@
                     android:background="@drawable/rounded_login_button"
                     android:backgroundTint="@color/white">
 
-                    <com.mikhaellopez.circularimageview.CircularImageView
+                    <ImageView
                         android:id="@+id/ivProfile"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@drawable/circle_view"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/camera"
-                        app:civ_border_width="0dp" />
+                        android:src="@drawable/camera" />
                 </FrameLayout>
             </LinearLayout>
 
