--- a/app/src/main/res/layout/left_nav_header.xml
+++ b/app/src/main/res/layout/left_nav_header.xml
@@ -31,14 +31,13 @@
                     android:background="@drawable/rounded_login_button"
                     android:backgroundTint="@color/grey">
 
-                    <com.mikhaellopez.circularimageview.CircularImageView
+                    <ImageView
                         android:id="@+id/ivProfilePic"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@drawable/circle_view"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/camera"
-                        app:civ_border_width="0dp" />
+                        android:src="@drawable/camera" />
 
                     <Button
                         android:layout_width="20dp"
