--- a/app/src/main/res/layout/sign_up_act.xml
+++ b/app/src/main/res/layout/sign_up_act.xml
@@ -123,7 +123,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
-                        <de.hdodenhof.circleimageview.CircleImageView
+                        <ImageView
                             android:id="@+id/ivProfile"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
@@ -131,8 +131,7 @@
                             android:layout_margin="20dp"
                             android:background="@drawable/circle_view"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/camera"
-                            app:civ_border_width="0dp" />
+                            android:src="@drawable/camera" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
