--- a/app/src/main/res/layout/toolbar_home_new.xml
+++ b/app/src/main/res/layout/toolbar_home_new.xml
@@ -20,13 +20,12 @@
         android:layout_gravity="left"
         android:layout_marginLeft="18dp">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
+        <ImageView
             android:id="@+id/ivToolbarProfile"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:background="@drawable/circle_view"
             android:scaleType="centerCrop"
-            android:src="@drawable/camera"
-            app:civ_border_width="0dp" />
+            android:src="@drawable/camera" />
     </LinearLayout>
 </android.support.v7.widget.Toolbar>
