--- a/app/src/main/res/layout/home_page_deal_of_day.xml
+++ b/app/src/main/res/layout/home_page_deal_of_day.xml
@@ -7,35 +7,33 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_dealofdayClick"
             style="@style/CodeFont"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="15dp"
             android:layout_weight="3"
-            android:gravity="top|left"
+            android:gravity="left|center"
+            android:padding="10dp"
             android:text="@string/txt_DealOfDay" />
 
         <TextView
-            android:id="@+id/tv_seeAllDealofDay"
+            android:id="@+id/tvViewAll"
+            style="@style/CodeFontSeeAll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="7"
-            android:text="@string/txt_seeAll"
-            style="@style/CodeFontSeeAll"
             android:gravity="bottom|right"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:text="@string/txt_seeAll" />
     </LinearLayout>
 
     <com.mindorks.placeholderview.PlaceHolderView
-        android:id="@+id/placeholderviewDealofDay"
+        android:id="@+id/phvDealOfDay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical"
-        android:paddingLeft="15dp"
-        android:layout_margin="0dp"/>
+        android:padding="10dp"
+        android:scrollbars="vertical" />
 </LinearLayout>
