--- a/app/src/main/res/layout/left_nav_header.xml
+++ b/app/src/main/res/layout/left_nav_header.xml
@@ -31,7 +31,7 @@
                     android:background="@drawable/rounded_login_button"
                     android:backgroundTint="@color/grey">
 
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/ivProfilePic"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
