--- a/app/src/main/res/layout/sign_up_act.xml
+++ b/app/src/main/res/layout/sign_up_act.xml
@@ -123,7 +123,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
-                        <ImageView
+                        <de.hdodenhof.circleimageview.CircleImageView
                             android:id="@+id/ivProfile"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
